--- a/styles.css
+++ b/styles.css
@@ -3,27 +3,34 @@ body {
 	flex-direction: column;
 	justify-content: center;
 	align-items: center;
-	margin-top: 150px;
+	margin-top: 100px;
 	margin-bottom: 100px;
 	font-weight: bold;
 	font-family: 'Lato', sans-serif; 
 }
 
-.backgroundgradient {background: linear-gradient (70deg, white, #cc6666);
+.backgroundgradient {background: linear-gradient(to right, white , #b76e79);
 }
 
 h1 {
-	font-weight: lighter;
-	font-size: 60px;
+	font-weight: black;
+	font-size: 50px;
 	letter-spacing: 2px;
 	margin-bottom: 0px;
 }
 
-h1 {
+h2 {
 	font-weight: lighter;
 	font-size: 30px;
 	letter-spacing: 2px;
 	margin-bottom: 0px;
+}
+
+.circletag {
+    display: block;
+    width: 10%;
+    border-radius: 50%;
+    margin-top: 20px;   
 }
 
 .inputsection {
